Make texts/button wider for improved readability (closes #51)

--- a/website/templates/common/head.pug
+++ b/website/templates/common/head.pug
@@ -32,6 +32,8 @@ include ../components/user_button
 
 //- Auth handler (runs on client)
 script.
+	Chart.defaults.global.defaultFontSize = 15;
+
 	function stringQs(str) {
 		const u = str.split('?');
 
