--- a/website/templates/components/map_editor.pug
+++ b/website/templates/components/map_editor.pug
@@ -5,7 +5,7 @@ form#pdm-editor-form
 	if editors.pdm && editors.pdm.fields
 		div.alert.alert-info#pdm-editor-mode
 
-		button#pdm-edit-position.btn.btn-sm.btn-secondary.btn-block.mb-2.d-none(type="button")
+		button#pdm-edit-position.btn.btn-secondary.btn-block.mb-2.d-none(type="button")
 			i.fa.fa-map-marked.mr-2
 			| Modifier la position
 
