--- a/website/templates/components/map_sidebar.pug
+++ b/website/templates/components/map_sidebar.pug
@@ -1,6 +1,6 @@
 div#pdm-map-sidebar.pdm-hidden
 	div.btn-group-vertical.pdm-sidebar-buttons(role="group")
-		button.toggle-map-sidebar.btn.btn-outline-secondary.btn-sm.mt-2(type="button" title="Afficher/masquer la barre latérale")
+		button.toggle-map-sidebar.btn.btn-outline-secondary.mt-2(type="button" title="Afficher/masquer la barre latérale")
 			i.fa.fa-bars
 
 	div.overflow-auto.h-100
