--- a/website/templates/pages/user.pug
+++ b/website/templates/pages/user.pug
@@ -3,7 +3,7 @@ extends ../layout.pug
 
 block navbar
 	a.p-2.text-muted(href="/#summary") En ce moment
-	a.p-2.text-muted(href="/#statistics") Statistiques
+	a.p-2.text-muted(href="/#statistics") Stats
 	a.p-2.text-muted(href="/#data") Données
 
 
