--- a/website/templates/components/user_button.pug
+++ b/website/templates/components/user_button.pug
@@ -82,12 +82,12 @@ script.
 
 mixin user_button
 	div.pdm-user-button
-		button.connect-osm-ub.btn.btn-sm.btn-outline-secondary.text-truncate.ml-2(role="button" title="S'inscrire / Se connecter")
+		button.connect-osm-ub.btn.btn-outline-secondary.text-truncate.ml-2(role="button" title="S'inscrire / Se connecter")
 			i.fa.fa-sign-in-alt
 			span.d-none.d-sm-inline.ml-1 S'inscrire / Se connecter
 
 		div.dropdown.d-none
-			button.btn.btn-sm.btn-outline-secondary.dropdown-toggle.text-truncate.ml-2(role="button" title="Menu" data-toggle="dropdown")
+			button.btn.btn-outline-secondary.dropdown-toggle.text-truncate.ml-2(role="button" title="Menu" data-toggle="dropdown")
 				i.fa.fa-user
 				span.d-none.d-sm-inline.ml-1 Utilisateur
 			div.dropdown-menu
@@ -100,6 +100,6 @@ mixin user_button
 					| Se déconnecter
 
 mixin user_connect
-	button.connect-osm.btn.btn-primary(role="button")
+	button.connect-osm.btn.btn-lg.btn-primary(role="button")
 		i.fa.fa-sign-in-alt
 		span.d-none.d-sm-inline.ml-1 S'inscrire / Se connecter
