Improve navbar, add icons (closes #56 #13)

--- a/website/templates/common/body_header.pug
+++ b/website/templates/common/body_header.pug
@@ -4,4 +4,4 @@ div.container-fluid
 			div.col-12.text-center
 				a.blog-header-logo.text-dark(href="/")
 					img.blog-header-logo(src="/images/logo.png" title="Projet du mois OpenStreetMap")
-				p.m-0.mt-2.text-muted Catalyseur d'énergies pour OpenStreetMap
+				p.m-0.mt-2.text-muted(style="line-height: 1.4rem") Catalyseur d'énergies pour OpenStreetMap
