--- a/website/templates/components/user_button.pug
+++ b/website/templates/components/user_button.pug
@@ -84,12 +84,12 @@ mixin user_button
 	div.pdm-user-button
 		button.connect-osm-ub.btn.btn-outline-secondary.text-truncate.ml-2(role="button" title="S'inscrire / Se connecter")
 			i.fa.fa-sign-in-alt
-			span.d-none.d-sm-inline.ml-1 S'inscrire / Se connecter
+			span.d-none.d-lg-inline.ml-1 S'inscrire / Se connecter
 
 		div.dropdown.d-none
 			button.btn.btn-outline-secondary.dropdown-toggle.text-truncate.ml-2(role="button" title="Menu" data-toggle="dropdown")
 				i.fa.fa-user
-				span.d-none.d-sm-inline.ml-1 Utilisateur
+				span.d-none.d-lg-inline.ml-1 Utilisateur
 			div.dropdown-menu
 				a.dropdown-item.pdm-user-page-btn(href="")
 					i.fa.fa-medal.mr-1
