--- a/website/templates/components/map_sidebar_feature.pug
+++ b/website/templates/components/map_sidebar_feature.pug
@@ -217,6 +217,96 @@ script.
 		}
 	}
 
+	// Create DOM structure for features tags following form
+	function getReadableTags(container, tags, rawTagsLabel = null) {
+		if(rawTagsLabel || !editors.pdm || !editors.pdm.fields) {
+			const div = document.createElement("div");
+			div.classList.add("form-group", "m-0", "mb-1");
+
+			const label = document.createElement("label");
+			label.classList.add("m-0", "text-muted");
+			label.appendChild(document.createTextNode(rawTagsLabel || "Attributs"));
+			div.appendChild(label);
+
+			const textarea = document.createElement("textarea");
+			textarea.classList.add("form-control");
+			textarea.setAttribute("rows", Object.keys(tags).length);
+			textarea.setAttribute("readonly", null);
+			textarea.appendChild(document.createTextNode(Object.entries(tags).map(e => e.join("=")).join("\n")));
+			div.appendChild(textarea);
+
+			container.appendChild(div);
+		}
+		else {
+			const div = document.createElement("div");
+			const toComplete = [];
+			let editorTags = [];
+
+			for(let field of editors.pdm.fields) {
+				if(field.tag) { editorTags.push(field.tag); }
+				else if(field.tags) { editorTags = editorTags.concat(Object.keys(field.tags)); }
+
+				if(field.type !== "hidden") {
+					if(tags[field.tag]) {
+						const p = document.createElement("p");
+						p.classList.add("mb-1");
+
+						const title = document.createElement("span");
+						title.classList.add("text-muted", "d-block");
+						title.appendChild(document.createTextNode(field.name));
+						p.appendChild(title);
+
+						let valueText = tags[field.tag];
+						if(field.type === "select" && field.values.find(v => v.v === tags[field.tag])) {
+							valueText = field.values.find(v => v.v === tags[field.tag]).l;
+						}
+						else if(field.type === "3states" && ["yes", "no"].includes(tags[field.tag])) {
+							valueText = tags[field.tag] === "yes" ? "Oui" : "Non";
+						}
+
+						const value = document.createElement("span");
+						value.classList.add("d-block");
+						value.appendChild(document.createTextNode(valueText));
+						p.appendChild(value);
+
+						div.appendChild(p);
+					}
+					else if(field.tag !== "note") {
+						toComplete.push(field.name);
+					}
+				}
+			}
+
+			container.appendChild(div);
+
+			// Check if there are other tags to display as raw
+			const leftTags = Object.keys(tags).filter(t => !editorTags.includes(t));
+			if(leftTags.length > 0) {
+				getReadableTags(container, Object.fromEntries(Object.entries(tags).filter(e => leftTags.includes(e[0]))), "Autres attributs");
+			}
+
+			if(toComplete.length > 0) {
+				const p = document.createElement("div");
+
+				const title = document.createElement("span");
+				title.classList.add("text-muted", "d-block");
+				title.appendChild(document.createTextNode("Attributs à renseigner"));
+				p.appendChild(title);
+
+				const value = document.createElement("ul");
+				value.classList.add("mb-1");
+				value.style.paddingLeft = "1.5rem";
+				toComplete.forEach(tc => {
+					const tcd = document.createElement("li");
+					tcd.appendChild(document.createTextNode(tc));
+					value.appendChild(tcd);
+				});
+				p.appendChild(value);
+				container.appendChild(p);
+			}
+		}
+	}
+
 	// Create DOM structure for feature description
 	function getDescription(feature) {
 		const s = feature.source;
@@ -254,14 +344,6 @@ script.
 				}
 				tags.forEach(kv => tagsForEdit[kv.k] = kv.v);
 
-				if(tags.length > 0) {
-					tags = `
-						<div class="form-group m-0 mb-1">
-							<label class="m-0" for="exampleFormControlTextarea1">Attributs à ajouter</label>
-							<textarea class="form-control" rows="${tags.length}" readonly>${tags.map(kv => kv.k+"="+kv.v).join("\n")}</textarea>
-						</div>`;
-				}
-
 				let subtitle = meta.subtitle ? meta.subtitle.auto : "";
 				if(labels.subtitles) {
 					const subtitles = Object.keys(labels.subtitles).filter(s => subtitle.includes(s)).map(s => labels.subtitles[s]);
@@ -271,8 +353,11 @@ script.
 
 				resDiv.innerHTML = `
 					<h5>${labels.name}</h5>
-					<div class="alert alert-info">${subtitle.replace(/\n/g, "<br />")}</div>
-					${tags}`;
+					<div class="alert alert-info">${subtitle.replace(/\n/g, "<br />")}</div>`;
+
+				if(tags.length > 0) {
+					getReadableTags(resDiv, tagsForEdit);
+				}
 
 				const divButtons = document.createElement("div");
 				divButtons.classList.add("btn-group", "btn-block", "mt-1");
@@ -412,11 +497,9 @@ script.
 
 			resDiv.innerHTML = `
 				<h5>${p.name || tags.ref || osmSource.name}</h5>
-				<div class="alert alert-info">${osmSource.description}</div>
-				<div class="form-group m-0 mb-1">
-					<label class="m-0" for="exampleFormControlTextarea1">Attributs actuels</label>
-					<textarea class="form-control" rows="${Object.keys(tags).length}" readonly>${Object.entries(tags).map(e => e.join("=")).join("\n")}</textarea>
-				</div>`;
+				<div class="alert alert-info">${osmSource.description}</div>`;
+
+			getReadableTags(resDiv, tags);
 
 			createFeatureButton(resDiv, "edit", "btn-block mt-2 dropup", {
 				osmid: p.osm_id,
@@ -432,12 +515,9 @@ script.
 			resDiv.innerHTML = `
 				<h5>${osmSource.name}</h5>
 				<div class="alert alert-info">${osmSource.description}</div>
-				${p.name || tags.ref ? `<p>${p.name || tags.ref}</p>` : ''}
-				<div class="form-group m-0 mb-1">
-					<label class="m-0" for="exampleFormControlTextarea1">Attributs actuels</label>
-					<textarea class="form-control" rows="${Object.keys(tags).length}" readonly>${Object.entries(tags).map(e => e.join("=")).join("\n")}</textarea>
-				</div>`;
+				${p.name || tags.ref ? `<p>${p.name || tags.ref}</p>` : ''}`;
 
+			getReadableTags(resDiv, tags, "Attributs");
 			createFeatureButton(resDiv, "add", "btn-block mt-2 dropup", { originalCoordinates });
 		}
 		else {
