Wording on CTA contribute (closes #57)

--- a/website/templates/pages/project.pug
+++ b/website/templates/pages/project.pug
@@ -53,7 +53,7 @@ block content
 				a.pdm-wide-link.map(href=`/projects/${id}/map`)
 				a.btn.btn-primary.btn-lg(style="color: white")
 					i.fa.fa-pen.mr-2
-					| Commencer à contribuer
+					| Contribuer
 				a.btn.btn-light.btn-corner(style="bottom: 10px; left: 10px")
 					i.fa.fa-expand
 
@@ -61,7 +61,7 @@ block content
 			div.text-center
 				a.btn.btn-primary.btn-lg.m-1(style="color: white" href=`/projects/${id}/map`)
 					i.fa.fa-pen.mr-2
-					| Commencer à contribuer
+					| Contribuer
 				if links.osmwiki
 					a.btn.btn-secondary.btn-lg.m-1(href=links.osmwiki target="_blank" role="button")
 						i.fa.fa-book.mr-2
