--- a/website/templates/components/map_navbar.pug
+++ b/website/templates/components/map_navbar.pug
@@ -1,10 +1,10 @@
 nav.navbar.navbar-expand-sm.navbar-light.bg-light.d-flex.justify-content-between.align-items-center.flex-nowrap
 	div
-		button.btn.btn-outline-secondary.toggle-map-sidebar.mr-2
+		button.btn.btn-outline-secondary.toggle-map-sidebar.mr-2.d-none.d-sm-inline-block
 			i.fa.fa-bars
 		a.navbar-brand.d-none.d-md-inline-block(title="Retour à la page d'accueil" href="/")
 			img(src="/images/logo_mini.png" alt="Projet du mois")
-		a.navbar-brand.d-none.d-sm-inline-block.d-md-none(title="Retour à la page d'accueil" href="/")
+		a.navbar-brand.d-inline-block.d-md-none(title="Retour à la page d'accueil" href="/")
 			img(src="/images/favicon.png" alt="Projet du mois OpenStreetMap")
 
 	include geocoder.pug
